@@ -422,6 +422,7 @@ $wgAutoloadLocalClasses = array(
 	'ApiQueryWatchlist' => 'includes/api/ApiQueryWatchlist.php',
 	'ApiQueryWatchlistRaw' => 'includes/api/ApiQueryWatchlistRaw.php',
 	'ApiResult' => 'includes/api/ApiResult.php',
+	'ApiRevisiondelete' => 'includes/api/ApiRevisiondelete.php',
 	'ApiRollback' => 'includes/api/ApiRollback.php',
 	'ApiRsd' => 'includes/api/ApiRsd.php',
 	'ApiSetNotificationTimestamp' => 'includes/api/ApiSetNotificationTimestamp.php',
